tests/ui/const-generics/generic_const_exprs/expected-type-of-closure-body-to-be-a-closure-or-coroutine-ice-113776.stderr
error[E0425]: cannot find type `F` in this scope
  --> $DIR/expected-type-of-closure-body-to-be-a-closure-or-coroutine-ice-113776.rs:12:17
   |
LL |          let f: F = async { 1 };
   |                 ^
   |
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
   |
   = note: similarly named trait `Fn` defined here
help: a trait with a similar name exists
   |
LL |          let f: Fn = async { 1 };
   |                  +
help: you might be missing a type parameter
   |
LL | fn f<T, F>(
   |       +++

error[E0391]: cycle detected when building an abstract representation for `f::{constant#0}`
  --> $DIR/expected-type-of-closure-body-to-be-a-closure-or-coroutine-ice-113776.rs:10:17
   |
LL |       data: &[(); {
   |  _________________^
LL | |
LL | |          let f: F = async { 1 };
...  |
LL | |      }],
   | |______^
   |
note: ...which requires building THIR for `f::{constant#0}`...
  --> $DIR/expected-type-of-closure-body-to-be-a-closure-or-coroutine-ice-113776.rs:10:17
   |
LL |       data: &[(); {
   |  _________________^
LL | |
LL | |          let f: F = async { 1 };
...  |
LL | |      }],
   | |______^
note: ...which requires type-checking `f::{constant#0}`...
  --> $DIR/expected-type-of-closure-body-to-be-a-closure-or-coroutine-ice-113776.rs:10:17
   |
LL |       data: &[(); {
   |  _________________^
LL | |
LL | |          let f: F = async { 1 };
...  |
LL | |      }],
   | |______^
   = note: ...which again requires building an abstract representation for `f::{constant#0}`, completing the cycle
note: cycle used when checking that `f` is well-formed
  --> $DIR/expected-type-of-closure-body-to-be-a-closure-or-coroutine-ice-113776.rs:9:1
   |
LL | / fn f<T>(
LL | |     data: &[(); {
LL | |
LL | |          let f: F = async { 1 };
...  |
LL | |      }],
LL | | ) -> impl Iterator<Item = SubAssign> {}
   | |____________________________________^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0391, E0425.
For more information about an error, try `rustc --explain E0391`.
